make the app secured from public & normal user

--- a/app/views/equipment/_form.html.erb
+++ b/app/views/equipment/_form.html.erb
@@ -11,22 +11,22 @@
   </div>
 
   <div class="field">
-    <%= f.label :kindof %>
+    <%= f.label :kindof, "Type" %>
     <%= f.text_field :kindof %>
   </div>
 
   <div class="field">
-    <%= f.label :serial %>
+    <%= f.label :serial, "Serial Number"  %>
     <%= f.text_field :serial %>
   </div>
 
   <div class="field">
-    <%= f.label :os %>
+    <%= f.label :os, "OS Version"  %>
     <%= f.text_field :os %>
   </div>
 
   <div class="field">
-    <%= f.label :udid %>
+    <%= f.label :udid, "UDID"  %>
     <%= f.text_field :udid %>
   </div>
 
