--- a/app/views/equipment/show.html.erb
+++ b/app/views/equipment/show.html.erb
@@ -4,22 +4,22 @@
 </p>
 
 <p>
-  <strong>Kindof:</strong>
+  <strong>Type:</strong>
   <%= @equipment.kindof %>
 </p>
 
 <p>
-  <strong>Serial:</strong>
+  <strong>Serial Number:</strong>
   <%= @equipment.serial %>
 </p>
 
 <p>
-  <strong>Os:</strong>
+  <strong>OS Version:</strong>
   <%= @equipment.os %>
 </p>
 
 <p>
-  <strong>Udid:</strong>
+  <strong>UDID:</strong>
   <%= @equipment.udid %>
 </p>
 
