--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,9 @@
-<div class="jumbotron">
-	<h1>Welcome to my app!</h1>
-	Click here to <%= link_to "Sign Up", "#", class: "btn btn-primary" %>
-</div>
+      <% if user_signed_in? %>
+      <li><%= link_to "You are now signed in, Please continue", equipment_index_path %></li>
+      <% else %>
+		<div class="jumbotron">
+			<h3>Would you like to view Test Devices?</h3>
+			<br/>
+			<%= link_to "Log in", new_user_session_path, class: "btn btn-primary" %>
+		</div>
+      <% end %>
