--- a/app/views/equipment/index.html.erb
+++ b/app/views/equipment/index.html.erb
@@ -28,6 +28,7 @@
             <% if current_user.id == 1 %>
             <td><%= link_to 'Update', edit_equipment_path(equipment) %></td>
             <% else %>
+            <td><%= link_to 'Update', edit_equipment_path(equipment) %></td>
             <td><%= link_to 'Destroy', equipment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
             <% end %>
           </tr>
