--- a/app/views/equipment/index.html.erb
+++ b/app/views/equipment/index.html.erb
@@ -4,7 +4,7 @@
     <table class="table table-bordered" style="border: 2px solid: ">
       <thead>
         <tr>
-          <th>Name</th>
+          <th><%= sortable "name" %></th>
           <th>Type</th>
           <th>Serial Number</th>
           <th>OS Version</th>
