--- a/app/views/equipment/index.html.erb
+++ b/app/views/equipment/index.html.erb
@@ -4,13 +4,13 @@
     <table class="table table-bordered" style="border: 2px solid: ">
       <thead>
         <tr>
-          <th><%= sortable "name" %></th>
-          <th>Type</th>
+          <th><%= sortable "name", "Name" %></th>
+          <th><%= sortable "kindof", "Type" %></th>
           <th>Serial Number</th>
-          <th>OS Version</th>
+          <th><%= sortable "os", "OS Version" %></th>
           <th>UDID</th>
-          <th>Location</th>
-          <th>Status</th>
+          <th><%= sortable "location", "Location" %></th>
+          <th><%= sortable "status", "Status" %></th>
           <th colspan="1"></th>
         </tr>
       </thead>
