add download CSV

--- a/app/views/equipment/index.html.erb
+++ b/app/views/equipment/index.html.erb
@@ -43,3 +43,6 @@
   <%= file_field_tag :file %>
   <%= submit_tag "Import" %>
 <% end %>
+
+<br/>
+  <a class="navbar-brand" href="http://nlist-things.herokuapp.com/equipment.csv">Download a CSV</a>
