--- a/app/views/equipment/index.html.erb
+++ b/app/views/equipment/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Test Devices</h1>
+<h3>Test Devices</h3>
 <div class="panel">
 <div class="table-bordered table-responsive text-center" >
     <table class="table table-bordered" style="border: 2px solid: ">
@@ -40,13 +40,24 @@
 <br>
 
 
+  <% if current_user.id == 1 %>
+    <h5>Import Devices using CSV</h5>
 
-<h5>Import Devices using CSV</h5>
+    <%= form_tag import_equipment_index_path, multipart: true do %>
+      <%= file_field_tag :file %>
+      <%= submit_tag "Import" %>
+    <% end %>
+  <% elsif current_user.id == 3 %>
+    <h5>Import Devices using CSV</h5>
 
-<%= form_tag import_equipment_index_path, multipart: true do %>
-  <%= file_field_tag :file %>
-  <%= submit_tag "Import" %>
-<% end %>
+    <%= form_tag import_equipment_index_path, multipart: true do %>
+      <%= file_field_tag :file %>
+      <%= submit_tag "Import" %>
+    <% end %>
+  <% else %>
+    <h4>If you need to Upload a CSV, Please ask Oliver or Andre.<h4/> 
+  <% end %>
+
 
 <br/>
   <a class="navbar-brand" href="http://nlist-things.herokuapp.com/equipment.csv">Download a CSV</a>
