--- a/app/views/equipment/new.html.erb
+++ b/app/views/equipment/new.html.erb
@@ -1,7 +1,7 @@
 <h1>New Test Device</h1>
 
-<%= form_for(equipment) do |f| %>
-  <% if equipment.errors.any? %>
+<%= form_for(@equipment) do |f| %>
+  <% if @equipment.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(equipment.errors.count, "error") %> prohibited this equipment from being saved:</h2>
     </div>
